--- a/student.html
+++ b/student.html
@@ -62,7 +62,7 @@
         <!-- line2 --------------------------------------------------------------------->
         <!-- 이승헌 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
+          <a href="https://2shoneycom.github.io/portfolioWeb/" target="_blank">
             <img src="./img/250x300_m.png"></a>
           <p>이름: 이*헌<br>소속: 홍익대 재학<br>학습기간: 5년</p>
         </div>
