--- a/student.html
+++ b/student.html
@@ -28,7 +28,7 @@
     <section>
       <div class="title"><p>리코드 코딩과 함께 하고 있습니다</p></div>
       <div id="group">
-        <!-- line1 --------------------------------------------------------------------->
+        <!--------------------------------------------------------------------- line1 -->
         <!-- 이세현 ------------------------------------------------------------->
         <div class="item">
           <a href="https://lsh-portal-f9ba5ffd8137.herokuapp.com" target="_blank">
@@ -59,7 +59,7 @@
             <img src="./img/250x300_f.png"></a>
           <p>이름: 이*은<br>소속: 낙생고 재학<br>학습기간: 1년</p>
         </div>
-        <!-- line2 --------------------------------------------------------------------->
+        <!--------------------------------------------------------------------- line2 -->
         <!-- 이승헌 ------------------------------------------------------------->
         <div class="item">
           <a href="https://2shoneycom.github.io/portfolioWeb/" target="_blank">
@@ -90,7 +90,7 @@
             <img src="./img/250x300_m.png"></a>
           <p>이름: 남*훈<br>소속: 아주대 재학<br>학습기간: 5년</p>
         </div>
-        <!-- line2 --------------------------------------------------------------------->
+        <!--------------------------------------------------------------------- line3 -->
         <!-- 신민철 ------------------------------------------------------------->
         <div class="item">
           <a href="about:blank" target="_blank">
@@ -111,7 +111,7 @@
         </div>
         <!-- 권민지 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
+          <a href="https://regulus512.github.io/WebPortfolio/" target="_blank">
             <img src="./img/250x300_f.png"></a>
           <p>이름: 권*지<br>소속: 청강대 졸업<br>학습기간: 3년</p>
         </div>
@@ -120,6 +120,68 @@
           <a href="https://gahee1907.github.io/project/" target="_blank">
             <img src="./img/250x300_f.png"></a>
           <p>이름: 이*희<br>소속: 백석대 졸업<br>학습기간: 5년</p>
+        </div>
+        <!--------------------------------------------------------------------- line4 -->
+        <!-- 윤선준 ------------------------------------------------------------->
+        <div class="item">
+          <a href="about:blank" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 윤*준<br>소속: 취업 준비<br>학습기간: 3년</p>
+        </div>
+        <!-- 김봉섭 ------------------------------------------------------------->
+        <div class="item">
+          <a href="https://aeujoung.github.io/DASOLPAGE/" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 김*섭<br>소속: 취업 준비<br>학습기간: 3년</p>
+        </div>
+        <!-- 이병관 ------------------------------------------------------------->
+        <div class="item">
+          <a href="https://blackvrice.github.io/myWebSite/" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 이*관<br>소속: 취업 준비<br>학습기간: 3년</p>
+        </div>
+        <!-- 서강민 ------------------------------------------------------------->
+        <div class="item">
+          <a href="https://regulus512.github.io/WebPortfolio/" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 서*민<br>소속: 평택대 재학<br>학습기간: 5년</p>
+        </div>
+        <!-- 김선호 ------------------------------------------------------------->
+        <div class="item">
+          <a href="https://gahee1907.github.io/project/" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 김*호<br>소속: 선문대 졸업<br>학습기간: 3년</p>
+        </div>
+        <!--------------------------------------------------------------------- line5 -->
+        <!-- 심주완 ------------------------------------------------------------->
+        <div class="item">
+          <a href="about:blank" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 심*완<br>소속: 명지대 재학<br>학습기간: 5년</p>
+        </div>
+        <!-- 김초은 ------------------------------------------------------------->
+        <div class="item">
+          <a href="about:blank" target="_blank">
+            <img src="./img/250x300_f.png"></a>
+          <p>이름: 김*은<br>소속: 명지대 재학<br>학습기간: 3년</p>
+        </div>
+        <!-- 최승화 ------------------------------------------------------------->
+        <div class="item">
+          <a href="about:blank" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 최*화<br>소속: 경기대 재학<br>학습기간: 5년</p>
+        </div>
+        <!-- 임세희 ------------------------------------------------------------->
+        <div class="item">
+          <a href="about:blank" target="_blank">
+            <img src="./img/250x300_f.png"></a>
+          <p>이름: 임*희<br>소속: 수원대 재학<br>학습기간: 3년</p>
+        </div>
+        <!-- 이원탁 ------------------------------------------------------------->
+        <div class="item">
+          <a href="about:blank" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 이*탁<br>소속: 안양대 재학<br>학습기간: 2년</p>
         </div>
       </div>
     </section>
