--- a/student.html
+++ b/student.html
@@ -130,25 +130,25 @@
         </div>
         <!-- 김봉섭 ------------------------------------------------------------->
         <div class="item">
-          <a href="https://aeujoung.github.io/DASOLPAGE/" target="_blank">
+          <a href="https://jenniejuno.github.io/BsCode47/" target="_blank">
             <img src="./img/250x300_m.png"></a>
           <p>이름: 김*섭<br>소속: 취업 준비<br>학습기간: 3년</p>
         </div>
         <!-- 이병관 ------------------------------------------------------------->
         <div class="item">
-          <a href="https://blackvrice.github.io/myWebSite/" target="_blank">
+          <a href="about:blank" target="_blank">
             <img src="./img/250x300_m.png"></a>
           <p>이름: 이*관<br>소속: 취업 준비<br>학습기간: 3년</p>
         </div>
         <!-- 서강민 ------------------------------------------------------------->
         <div class="item">
-          <a href="https://regulus512.github.io/WebPortfolio/" target="_blank">
+          <a href="about:blank" target="_blank">
             <img src="./img/250x300_m.png"></a>
           <p>이름: 서*민<br>소속: 평택대 재학<br>학습기간: 5년</p>
         </div>
         <!-- 김선호 ------------------------------------------------------------->
         <div class="item">
-          <a href="https://gahee1907.github.io/project/" target="_blank">
+          <a href="about:blank" target="_blank">
             <img src="./img/250x300_m.png"></a>
           <p>이름: 김*호<br>소속: 선문대 졸업<br>학습기간: 3년</p>
         </div>
