--- a/student.html
+++ b/student.html
@@ -41,6 +41,12 @@
             <img src="./img/250x300_m.png"></a>
           <p>이름: 현*명<br>소속: 연세대 재학<br>학습기간: 6년</p>
         </div>
+        <!-- 윤선준 ------------------------------------------------------------->
+        <div class="item">
+          <a href="./sub/blank.html" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 윤*준<br>소속: 취업 준비<br>학습기간: 3년</p>
+        </div>
         <!-- 장대한 ------------------------------------------------------------->
         <div class="item">
           <a href="https://daehanjang.github.io/PIWeb/" target="_blank">
@@ -53,12 +59,6 @@
             <img src="./img/250x300_m.png"></a>
           <p>이름: 박*찬<br>소속: 화성반월고 재학<br>학습기간: 3년</p>
         </div>
-        <!-- 이예은 ------------------------------------------------------------->
-        <div class="item">
-          <a href="about:blank" target="_blank">
-            <img src="./img/250x300_f.png"></a>
-          <p>이름: 이*은<br>소속: 낙생고 재학<br>학습기간: 1년</p>
-        </div>
         <!--------------------------------------------------------------------- line2 -->
         <!-- 이승헌 ------------------------------------------------------------->
         <div class="item">
@@ -68,15 +68,15 @@
         </div>
         <!-- 김민재 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
+          <a href="https://mjkim19.github.io/Personal-Website/" target="_blank">
             <img src="./img/250x300_m.png"></a>
           <p>이름: 김*재<br>소속: 한국외대 재학<br>학습기간: 3년</p>
         </div>
-        <!-- 이채은 ------------------------------------------------------------->
+        <!-- 서강민 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
-            <img src="./img/250x300_f.png"></a>
-          <p>이름: 이*은<br>소속: 한국외대 재학<br>학습기간: 5년</p>
+          <a href="https://kangman420.github.io/SKMWEB/" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 서*민<br>소속: 국제대 재학<br>학습기간: 5년</p>
         </div>
         <!-- 오원석 ------------------------------------------------------------->
         <div class="item">
@@ -86,14 +86,14 @@
         </div>
         <!-- 남지훈 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
+          <a href="./sub/blank.html" target="_blank">
             <img src="./img/250x300_m.png"></a>
           <p>이름: 남*훈<br>소속: 아주대 재학<br>학습기간: 5년</p>
         </div>
         <!--------------------------------------------------------------------- line3 -->
         <!-- 신민철 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
+          <a href="https://shiny-shine.github.io/Portfolio/" target="_blank">
             <img src="./img/250x300_m.png"></a>
           <p>이름: 신*철<br>소속: 호서대 재학<br>학습기간: 5년</p>
         </div>
@@ -122,11 +122,11 @@
           <p>이름: 이*희<br>소속: 백석대 졸업<br>학습기간: 5년</p>
         </div>
         <!--------------------------------------------------------------------- line4 -->
-        <!-- 윤선준 ------------------------------------------------------------->
+        <!-- 이예은 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
-            <img src="./img/250x300_m.png"></a>
-          <p>이름: 윤*준<br>소속: 취업 준비<br>학습기간: 3년</p>
+          <a href="./sub/blank.html" target="_blank">
+            <img src="./img/250x300_f.png"></a>
+          <p>이름: 이*은<br>소속: 낙생고 재학<br>학습기간: 1년</p>
         </div>
         <!-- 김봉섭 ------------------------------------------------------------->
         <div class="item">
@@ -136,52 +136,96 @@
         </div>
         <!-- 이병관 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
+          <a href="https://mimmizzang.github.io/webproject/" target="_blank">
             <img src="./img/250x300_m.png"></a>
           <p>이름: 이*관<br>소속: 취업 준비<br>학습기간: 3년</p>
         </div>
-        <!-- 서강민 ------------------------------------------------------------->
-        <div class="item">
-          <a href="about:blank" target="_blank">
-            <img src="./img/250x300_m.png"></a>
-          <p>이름: 서*민<br>소속: 평택대 재학<br>학습기간: 5년</p>
-        </div>
         <!-- 김선호 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
+          <a href="./sub/blank.html" target="_blank">
             <img src="./img/250x300_m.png"></a>
           <p>이름: 김*호<br>소속: 선문대 졸업<br>학습기간: 3년</p>
+        </div>
+        <!-- 이채은 ------------------------------------------------------------->
+        <div class="item">
+          <a href="./sub/blank.html" target="_blank">
+            <img src="./img/250x300_f.png"></a>
+          <p>이름: 이*은<br>소속: 한국외대 재학<br>학습기간: 5년</p>
         </div>
         <!--------------------------------------------------------------------- line5 -->
         <!-- 심주완 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
+          <a href="./sub/blank.html" target="_blank">
             <img src="./img/250x300_m.png"></a>
           <p>이름: 심*완<br>소속: 명지대 재학<br>학습기간: 5년</p>
         </div>
         <!-- 김초은 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
+          <a href="./sub/blank.html" target="_blank">
             <img src="./img/250x300_f.png"></a>
           <p>이름: 김*은<br>소속: 명지대 재학<br>학습기간: 3년</p>
         </div>
         <!-- 최승화 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
+          <a href="https://chamgimgoo.github.io/ChamGimGoo/" target="_blank">
             <img src="./img/250x300_m.png"></a>
           <p>이름: 최*화<br>소속: 경기대 재학<br>학습기간: 5년</p>
         </div>
         <!-- 임세희 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
+          <a href="./sub/blank.html" target="_blank">
             <img src="./img/250x300_f.png"></a>
           <p>이름: 임*희<br>소속: 수원대 재학<br>학습기간: 3년</p>
         </div>
         <!-- 이원탁 ------------------------------------------------------------->
         <div class="item">
-          <a href="about:blank" target="_blank">
+          <a href="./sub/blank.html" target="_blank">
             <img src="./img/250x300_m.png"></a>
           <p>이름: 이*탁<br>소속: 안양대 재학<br>학습기간: 2년</p>
+        </div>
+        <!--------------------------------------------------------------------- line6 -->
+        <!-- 강설현 ------------------------------------------------------------->
+        <div class="item">
+          <a href="./sub/blank.html" target="_blank">
+            <img src="./img/250x300_f.png"></a>
+          <p>이름: 강*현<br>소속: 취업 준비<br>학습기간: 0.1년</p>
+        </div>
+        <!-- 김병호 ------------------------------------------------------------->
+        <div class="item">
+          <a href="./sub/blank.html" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 김*호<br>소속: 취업 준비<br>학습기간: 3년</p>
+        </div>
+        <!-- 김태경 ------------------------------------------------------------->
+        <div class="item">
+          <a href="./sub/blank.html" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 김*경<br>소속: 취업 준비<br>학습기간: 3년</p>
+        </div>
+        <!-- 김태성 ------------------------------------------------------------->
+        <div class="item">
+          <a href="./sub/blank.html" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 김*성<br>소속: 강릉원주대 재학<br>학습기간: 3년</p>
+        </div>
+        <!-- 노장호 ------------------------------------------------------------->
+        <div class="item">
+          <a href="./sub/blank.html" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 노*호<br>소속: 취업 준비<br>학습기간: 2년</p>
+        </div>
+        <!--------------------------------------------------------------------- line7 -->
+        <!-- 박성훈 ------------------------------------------------------------->
+        <div class="item">
+          <a href="./sub/blank.html" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 박*훈<br>소속: 취업 준비<br>학습기간: 0.3년</p>
+        </div>
+        <!-- 박현준 ------------------------------------------------------------->
+        <div class="item">
+          <a href="./sub/blank.html" target="_blank">
+            <img src="./img/250x300_m.png"></a>
+          <p>이름: 박*준<br>소속: 취업 준비<br>학습기간: 3년</p>
         </div>
       </div>
     </section>
