--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
   <footer>
     <div class="footerbase">
       <div>
-        <p>{리:코드} 코딩 | 이성원 | 사업자번호 : 109-10-66803</p>
+        <p>리코드 코딩 교습소 | 사업자번호 : 109-10-66803</p>
         주소 : 경기 성남시 분당구 수내로 39, 분당지웰 푸르지오, 상가동 241호<br>
-        문의 : 010-3133-7119 <br>
+        문의 : 0507-1458-7120 <br>
         메일 : won @ re8code.com
-        <p>Copyright ⓒ 2025, {re:code} All Rights Reserved.</p>
+        <p>Copyright ⓒ 2025, Recode All Rights Reserved.</p>
       </div>
       <div class="footer_r">
         <img src="./img/re8code-footer.png">
