--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>리코드 코딩 교습소</title>
+  <link rel="icon" href="./favicon.png">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
   <link rel="stylesheet" type="text/css" href="./sorry.css">
 </head>
 
 <body>
-  <div></div>
 </body>
 
 </html>
