--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
   <link rel="icon" href="./favicon.png">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
-  <link rel="stylesheet" type="text/css" href="./sorry.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
+  <header>
+    <div class="inner">
+      <img src="./res/logo-280.png" alt="">
+    </div>
+  </header>
 </body>
 
 </html>
