--- a/index.html
+++ b/index.html
@@ -12,11 +12,22 @@
 </head>
 
 <body>
+  <!-- header ---------------------------------------------------------------->
   <header>
     <div class="inner">
-      <img src="./res/logo-280.png" alt="">
+      <a href="/">
+        <img src="./res/logo.png" alt="">
+      </a>
     </div>
   </header>
+  <!-- swiper ---------------------------------------------------------------->
+  <div class="swiper">
+    <div class="inner"></div>
+  </div>
+  <!-- 1st block ------------------------------------------------------------->
+  <div class="block1">
+    <div class="inner"></div>
+  </div>
 </body>
 
 </html>
